fix(options): prevent mobile sidebar tab highlight overflow

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -639,7 +639,8 @@ button:disabled {
   }
 
   .nav-item {
-    width: 100%;
+    width: auto;
+    box-sizing: border-box;
     text-align: left;
   }
 
